--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,33 @@
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
-	<script src="js/controllers/NerdCtrl.js"></script>
+	<script src="js/controllers/searchCtrl.js"></script>
 	<script src="js/services/NerdService.js"></script>
 	<script src="js/controllers/GeekCtrl.js"></script>
 	<script src="js/services/GeekService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
-<body ng-app="searchstack" ng-controller="NerdController">
+<body ng-app="searchstack" ng-controller="searchController">
 <div class="container">
 	
 	<!-- HEADER -->
 	<nav class="navbar navbar-inverse">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="/">searchstack</a>
-		</div>
+		
 		<ul class="nav navbar-nav">
-			<li><a href="/nerds">Nerds</a></li>
-			<li><a href="/geeks">Geeks</a></li>
+			<li><a href="/rank">랭킹</a></li>
+			<li><a href="/champion">챔피언</a></li>
+			<li><a href="/multiSearch">멀티서치</a></li>
 		</ul>
 	</nav>
+
+	<div class="logo">
+			<a class="home" href="/"><img src="img/logo.png"/></a>
+	</div>
+
+	<form>
+		<input type="text" ng-model="searchKeyword" placeholder="유저 아이디 검색해주세요,...">
+	</form>
 
 	<!-- ANGULAR DYNAMIC CONTENT -->
 	<div ng-view></div>
