--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,7 @@
 	<!-- ANGULAR CUSTOM -->
 	
 	<script src="js/controllers/searchCtrl.js"></script>
-	<script src="js/services/NerdService.js"></script>
-	
-	<script src="js/services/GeekService.js"></script>
+	<script src="js/services/searchService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
