--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
 	<script src="libs/angular-route/angular-route.min.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
-	
 	<script src="js/controllers/searchCtrl.js"></script>
+	<script src="js/controllers/rankCtrl.js"></script>
 	<script src="js/services/searchService.js"></script>
+	<script src="js/services/rankService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
